--- a/src/main/webapp/resources/css/theme.css
+++ b/src/main/webapp/resources/css/theme.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
 /*!
  * Comes from : http://bootswatch.com/spacelab/
  *
@@ -6523,7 +6523,7 @@ button.close {
     -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
+@import url("http://fonts.googleapis.com/css?family=Lato:400,700,900");
 .panel-primary .panel-title {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
